chore: user icon on mobile fix and pdf height fix

--- a/src/components/readingComponent/ReadingComponent.module.css
+++ b/src/components/readingComponent/ReadingComponent.module.css
@@ -75,6 +75,7 @@
 
 .pdfDisplay canvas {
     width: 100% !important;
+    height: fit-content;
 }
 
 .pdfDisplay::-webkit-scrollbar {
